--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 					<div class="modal-content">
 						<!-- Modal Header -->
 						<div class="modal-header">
+							<h4 class="align-middle text-center">Change Info</h4>
 							<button
 								type="button"
 								class="btn-close"
